@@ -73,7 +73,6 @@ $completion->set_module_viewed($cm);
 //$PAGE->add_body_class('geogebra-'.$somevar);
 
 $action = optional_param('action', '', PARAM_TEXT);
-$ispreview = ($action == 'preview');
 geogebra_view_header($geogebra, $cm, $course);
 $cangrade = has_capability('mod/geogebra:grade', $context, $USER->id, false);
 geogebra_view_intro($geogebra, $cm, $cangrade, $action);
@@ -81,23 +80,26 @@ geogebra_view_intro($geogebra, $cm, $cangrade, $action);
 if (!empty($action)){
     switch ($action){
         case 'preview':
-            geogebra_view_applet($geogebra, $context, null, true);
+            geogebra_view_applet($geogebra, $cm, $context, null, $action);
+            break;
+        case 'view':
+            if (!empty($attemptid)){
+                geogebra_view_applet($geogebra, $cm, $context, $attemptid, $action);
+            }
             break;
         case 'result':
-            geogebra_view_userid_results($geogebra, $USER, $context, $cm, $course, $action);
+            geogebra_view_userid_results($geogebra, $USER, $cm, $action);
             break;
     }
 } else{
-    if (!empty($attemptid)){
-        geogebra_view_applet($geogebra, $context, $attemptid);    
-    } else if ($cangrade){
+    if ($cangrade){
         // User can grade (probably is a teacher) so, by default, show results page
         // TODO: Review if it's necessary to show dates
         //geogebra_view_dates($geogebra, $cm);
         geogebra_view_results($geogebra, $context, $cm, $course, $action);
     } else{
         // Show GGB applet with last attempt
-        geogebra_view_applet($geogebra, $context);    
+        geogebra_view_applet($geogebra, $cm, $context);    
     }
 }
 
